--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,61 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<title>contact</title>
+		<title>Contact</title>
+		<meta charset="utf-8">
+		<!-- Linking the Reset CSS file to reset the browser defaults -->
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<!-- Linking the Style.css file to style the html -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
+		<div class="myHeader">
+			<div class="headerbar">
+				<header>
+					<span>Srivastava Cheemakurthi</span>
+				</header>
+				<a class="Portfolio" type="Link" href="portfolio.html">
+					<header class="smallLinks"><span>Portfolio</span></header>
+				</a>
+				<a class="Contact" href="contact.html">
+					<header class="smallLinks"><span>Contact</span></header>
+				</a>
+				<a class="About" href="index.html">
+					<header class="smallLinks"><span>About</span></header>
+				</a>
+			</div>
+		</div>
+		<div class="mainContent">
+			<div class="leftSide">
+				<h2>Contact</h2>
+			  	<form >
+				    <label>Name</label>
+				    <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
+				    <label>Email</label>
+				    <input type="text" id="lname" name="lastname" placeholder="Your email id..">
+				    <label>Message</label>
+				    <textarea id="message" name="message" placeholder="Write something.."></textarea>
+				    <input type="submit" value="Submit">
+			  	</form>
+			</div>
+			<div class="rightSide">
+				<h2>Connect with Me</h2>
+				<a href="https://www.stackoverflow.com" target="_blank">
+					<img src="assets/images/stackoverflow.png" alt="StackOverflow">
+				</a>
+				<a href="https://www.linkedin.com" target="_blank">
+					<img src="assets/images/linkedin.png" alt="LinkedIn">
+				</a>
+				<a href="https://www.github.com" target="_blank">
+					<img src="assets/images/github.png" alt="GitHub">	
+				</a>
+			</div>
+		</div>
+		<footer>
+			&#169; Copyright 2017 Srivastava Cheemakurthi
+		</footer>
 	</body>
+
 </html>
+
