--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,84 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<title></title>
+		<title>Portfolio</title>
+		<meta charset="utf-8">
+		<!-- Linking the Reset CSS file to reset the browser defaults -->
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<!-- Linking the Style.css file to style the html -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
-
+		<div class="myHeader">
+			<header>
+				<span>Srivastava Cheemakurthi</span>
+			</header>
+			<a class="Portfolio" href="portfolio.html">
+				<header class="smallLinks"><span>Portfolio</span></header>
+			</a>
+			<a class="Contact" href="contact.html">
+				<header class="smallLinks"><span>Contact</span></header>
+			</a>
+			<a class="About" href="index.html">
+				<header class="smallLinks"><span>About</span></header>
+			</a>
+		</div>
+		<div class="mainContent">
+			<div class="leftSide">
+				<h2>Portfolio</h2>
+	
+			<!-- Photo Grid -->
+				<div id="div1">
+					<img src="assets/images/Winner.jpg" alt="Winner" height="250" width="250">
+					<div id="div2">
+					   <span class="bold">FirstBox</span>
+					</div>
+				</div>
+				<div id="div3">
+					<img src="assets/images/Winner.jpg" alt="Winner" height="250" width="250">
+					<div id="div4">
+					   <span class="bold">SecondBox</span>
+					</div>
+				</div>
+			 	<div id="div5">
+					<img src="assets/images/Winner.jpg" alt="Winner" height="250" width="250">
+					<div id="div6">
+					   <span class="bold">ThirdBox</span>
+					</div>
+				</div>
+				<div id="div7">
+					<img src="assets/images/Winner.jpg" alt="Winner" height="250" width="250">
+					<div id="div8">
+					   <span class="bold">FourthBox</span>
+					</div>
+				</div>
+			 	<div id="div9">
+					<img src="assets/images/Winner.jpg" alt="Winner" height="250" width="250">
+					<div id="div10">
+					   <span class="bold">FifthBox</span>
+					</div>
+				</div>
+			</div>
+			<div class="rightSide">
+				<h2>Connect with Me</h2>
+				<a href="https://www.stackoverflow.com" target="_blank">
+					<img src="assets/images/stackoverflow.png" alt="StackOverflow">
+				</a>
+				<a href="https://www.linkedin.com" target="_blank">
+					<img src="assets/images/linkedin.png" alt="LinkedIn">
+				</a>
+				<a href="https://www.github.com" target="_blank">
+					<img src="assets/images/github.png" alt="GitHub">	
+				</a>
+			</div>
+		</div>
+		<footer>
+			&#169; Copyright 2017 Srivastava Cheemakurthi
+		</footer>
 	</body>
+	
 </html>
+
+
+
+
